--- a/exercises/Exercise1.ipynb
+++ b/exercises/Exercise1.ipynb
@@ -5,17 +5,17 @@
    "metadata": {},
    "source": [
     "## Exercise 1.1: Final installation check.\n",
-    "If you have not gotten Python and the Jupyter Notebook to work (or your Terminal), then that is the first step! Please let your instructor know ASAP if this is an issue!\n"
+    "If you have not logged into Spydur or gotten Python and the Jupyter Notebook to work, then that is the first step! Please let your instructor know ASAP if this is an issue!\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 1.2: Organizing and reviewing Unix\n",
+    "## Exercise 1.2: Organizing and reviewing Linux\n",
     "A. If you haven't already, make a folder called PythonBootcamp/ in your home directory. Make sure there is an exercises/ folder, a lessons/ folder, a resources/ folder, and a Lesson1/ folder. Put the original set of lessons you download into the lessons/ folder, and original exercises into the exercises/ folder. Try using `mv`.  \n",
     "\n",
-    "B. From the `SGDPinfo.txt` file, pick find the Han and French - tell me the number of samples for each, the region they are from, and number of males and females, and who contributed their information. \n"
+    "B. From the `SGDPinfo.txt` file, find the Han and French - tell me the number of samples for each, the region they are from, and number of males and females, and who contributed their information. \n"
    ]
   },
   {
@@ -23,20 +23,18 @@
    "metadata": {},
    "source": [
     "## Exercise 1.3: Cerevisiae chromosomes\n",
-    "B. Go to [this link](http://sgd-archive.yeastgenome.org/sequence/S288C_reference/chromosomes/fasta/) and download each of the files ending in .fsa. These are the chromosomes of the yeast, S. cerevisiae. You may have to right-click these files depending on your web browser (and be aware, some browsers will save your file with a .txt extension). Don't want to individually save each or want to exercise more Unix skills? Try one of the following (likely the **curl** option will work, **wget** may not, but it will work on the server when we later get you on there.)\n",
+    "A. Go to [this link](http://sgd-archive.yeastgenome.org/sequence/S288C_reference/chromosomes/fasta/) and download each of the files ending in .fsa. These are the chromosomes of the yeast, S. cerevisiae. You may have to right-click these files depending on your web browser (and be aware, some browsers will save your file with a .txt extension). Don't want to individually save each or want to exercise more Linux skills? Try the following from within your `resources/` folder. \n",
     "\n",
-    "Make sure you are in your `resources/` folder. \n",
-    "\n",
-    "If **wget** works in your Terminal, you can also use \n",
-    "```bash\n",
-    "wget http://sgd-archive.yeastgenome.org/sequence/S288C_reference/chromosomes/fasta/*fsa\n",
-    "```\n",
-    "**curl** is another option to download direct from Terminal, where you can do:\n",
     "```bash\n",
     "curl http://sgd-archive.yeastgenome.org/sequence/S288C_reference/chromosomes/fasta/chr01.fsa > chr01.fsa\n",
     "```\n",
     "\n",
-    "Note that with `curl`, you could try to use a Unix for loop - want to give it a try? Let me know if you're doing this and want to try it out - I can help you work through the logic of what to try. \n",
+    "Note that with `curl`, we grabbed a single file. We aren't getting into this now, but it is possible to write loops in Linux to grab many files with similar names. Try: \n",
+    "```bash\n",
+    "for i in `seq 1 9`; do curl http://sgd-archive.yeastgenome.org/sequence/S288C_reference/chromosomes/fasta/chr0${i}.fsa > chr0${i}.fsa; done\n",
+    "```\n",
+    "This should give you chromosomes 1-9. \n",
+    "B. Can you modify the script to give you chromosomes 10-16 as well? you could try to use a Unix for loop - want to give it a try? Let me know if you're doing this and want to try it out - I can help you work through the logic of what to try. We do not need to grab the mitochondrial genome (chrmt), unless you want to look at that too. \n",
     "\n",
     "C. Make a single whole genome file called \"cerevisiae_genome.fasta\" by combining (concatenating) all the files into one file.\n",
     "\n",
@@ -44,8 +42,7 @@
     "HINT 1: Each of the original FASTA files contains a single chromosome; \n",
     "HINT 2: Look at the additional options for **grep** - is there any that can count numbers of lines containing a search term? What about finding lines that do NOT contain a particular search term?).\n",
     "\n",
-    "E. Look up the command 'wc' and find out what it does. Get size of total genome. (HINT: The size of the genome can be determined by counting the number of characters not on the same line as a fasta header).\n",
-    "\n"
+    "E. Look up the command 'wc' and find out what it does. Get size of total genome. (HINT: The size of the genome can be determined by counting the number of characters not on the same line as a fasta header).\n"
    ]
   },
   {
@@ -127,7 +124,7 @@
     "## Exercise 1.7: Getting real and old (Challenge question - this may be difficult!)\n",
     "A. Let's look at an ancient DNA dataset. Go to [the Reich Lab website](https://reich.hms.harvard.edu/datasets), scroll down, and find the \"Genotypes of individuals\" dataset from the Fu et al. (2016) study. Make a directory titled `fuetal2016/` in your `resources/` directory and download the dataset into this folder. \n",
     "\n",
-    "B. Use the command **unzip** to unzip the downloaded file. If you are using cygwin and it does not work, try using **apt-cyg install unzip** to download the Unix command. \n",
+    "B. Use the command **unzip** to unzip the downloaded file. \n",
     "\n",
     "C. There are two sets of data, the **51.2.2M** and the **archaic**. These represent two different panels of SNPs that were captured for this study. Review the README for more information. The **.ind** file lists all the individuals, showing their ID, sex, and name. The **.snp** file lists the set of SNPs used (each row is one SNP, with information on the SNP ID, chromosome, genetic position, physical position, and the two alleles observed in humans. The **.geno** file shows each individual's genotype, with each row representing a SNP and each column representing an individual. The possible values are 0, 1, 2 and 9, where x = 0, 1 and 2 represent the number of the first allele observed in the individual (with 2-x being the number of the second allele observed in the individual) and 9 indicates missing data. \n",
     "\n",
@@ -135,7 +132,7 @@
     "\n",
     "D. All the included data are for ancient individuals, who may have missing data. What are the total number of SNPs used in each dataset? How many SNPs have no data for the UstIshim individual? For the Malta1 individual? For the Oase1 individual? For Vestonice16 or Loschbour?\n",
     "\n",
-    "E. While this dataset is labeled as providing genotype information, is that actually true? A genotype implies you have knowledge of both alleles at each SNP (you know something about heterozygosity). Is that true here? How would you figure out if you do in fact have genotype data here, or if you only have single allele calls per SNP? Try this out for the individuals named in part D). \n"
+    "E. While this dataset is labeled as providing genotype information, is that actually true? A genotype implies you have knowledge of both alleles at each SNP (you know something about heterozygosity). Is that true here? If so, you would expect that for each individual, there would be at least one SNPHow would you figure out if you do in fact have genotype data here, or if you only have single allele calls per SNP? Try this out for the individuals named in part D). \n"
    ]
   },
   {
@@ -198,7 +195,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -212,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
