Lesson 3 updated, still updating Exercise 3

--- a/exercises/Exercise1.ipynb
+++ b/exercises/Exercise1.ipynb
@@ -132,7 +132,7 @@
     "\n",
     "D. All the included data are for ancient individuals, who may have missing data. What are the total number of SNPs used in each dataset? How many SNPs have no data for the UstIshim individual? For the Malta1 individual? For the Oase1 individual? For Vestonice16 or Loschbour?\n",
     "\n",
-    "E. While this dataset is labeled as providing genotype information, is that actually true? A genotype implies you have knowledge of both alleles at each SNP (you know something about heterozygosity). Is that true here? If so, you would expect that for each individual, there would be at least one SNPHow would you figure out if you do in fact have genotype data here, or if you only have single allele calls per SNP? Try this out for the individuals named in part D). \n"
+    "E. While this dataset is labeled as providing genotype information, is that actually true? A genotype implies you have knowledge of both alleles at each SNP (you know something about heterozygosity). Is that true here? If so, you would expect that for each individual, there would be at least one SNP with a heterozygous genotype. How would you figure out if you have at least one SNP per individual with a heterozygous genotype? Try this out for the individuals named in part D). \n"
    ]
   },
   {
@@ -184,13 +184,6 @@
     "3. What types of problems would you like more of?\n",
     "4. About how long did Lesson 1 take you? "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
