--- a/lessons/Lesson1.ipynb
+++ b/lessons/Lesson1.ipynb
@@ -748,13 +748,13 @@
     "s = 'hella world'\n",
     "i = 42\n",
     "f = 3.14159\n",
-    "print s\n",
+    "print (s)\n",
     "print 'the variable s is type',type(s)\n",
     " \n",
-    "print i\n",
+    "print (i)\n",
     "print 'the variable i is type',type(i)\n",
     " \n",
-    "print f\n",
+    "print (f)\n",
     "print 'the variable f is type',type(f)\n"
    ]
   },
@@ -766,7 +766,7 @@
     " In general, variables are assigned by typing the name you want to use, followed by a single equals sign, then the value you'd like to store. This is the same whether the variable you're assigning is an object of type str (a character string), int (whole number), float (non-integer real number), or any number of other fancier things you'll be using in the next two weeks.\n",
     " \n",
     " \n",
-    "While (as your program tells you with the handy type() function) i is currently an integer, that doesn't mean it cannot change. You can easily reassign i to be anything that takes your fancy, including the value of another variable. You would do this with a statement such as the following:"
+    "While (as your program tells you with the handy `type()` function) i is currently an integer, that doesn't mean it cannot change. You can easily reassign i to be anything that takes your fancy, including the value of another variable. You would do this with a statement such as the following:"
    ]
   },
   {
@@ -777,7 +777,7 @@
    "source": [
     "i = s\n",
     " \n",
-    "print i\n",
+    "print (i)\n",
     "print 'the variable i is now type',type(i)\n"
    ]
   },
@@ -822,18 +822,18 @@
     "# and exponents use a double-asterisk (**)\n",
     "pow = i ** f\n",
     " \n",
-    "print 'sum',sum\n",
-    "print 'diff',diff\n",
-    "print 'prod',prod\n",
-    "print 'quo',quo\n",
-    "print 'pow',pow\n",
+    "print ('sum',sum)\n",
+    "print ('diff',diff)\n",
+    "print ('prod',prod)\n",
+    "print ('quo',quo)\n",
+    "print ('pow',pow)\n",
     " \n",
     "x = 5\n",
-    "print \"x = \", x\n",
+    "print (\"x = \", x)\n",
     "x = x + 1\n",
-    "print \"now x is one more than before = \", x\n",
+    "print (\"now x is one more than before = \", x)\n",
     "x += 1\n",
-    "print \"now x is one more than before = \", x\n"
+    "print (\"now x is one more than before = \", x)\n"
    ]
   },
   {
@@ -868,12 +868,12 @@
     "z_int = int(z_str)\n",
     "z_flt = float(z_str)\n",
     "\n",
-    "print x_int, x_str, x_flt\n",
+    "print (x_int, x_str, x_flt)\n",
     "\n",
-    "#result = x_int+y_flt+z_int; print result, type(result)  # What happens when you add floats and integers?\n",
-    "#result = x_int+y_int+z_int; print result, type(result)  # What happens when you add all integers?\n",
-    "#result = x_int+y_flt+z_str; print result, type(result)  #What happens when you add a string to numbers?\n",
-    "#result = x_str+y_str+z_str; print result, type(result)  # What happens when you add all strings?\n"
+    "#result = x_int+y_flt+z_int; print (result, type(result))  # What happens when you add floats and integers?\n",
+    "#result = x_int+y_int+z_int; print (result, type(result))  # What happens when you add all integers?\n",
+    "#result = x_int+y_flt+z_str; print (result, type(result))  #What happens when you add a string to numbers?\n",
+    "#result = x_str+y_str+z_str; print (result, type(result))  # What happens when you add all strings?\n"
    ]
   },
   {
