--- a/exercises/Exercise3.ipynb
+++ b/exercises/Exercise3.ipynb
@@ -32,7 +32,7 @@
     "collapsed": true
    },
    "source": [
-    "## Exercise 3.2: My Pet Gene Finder\n",
+    "## Exercise 3.2: My Pet Gene Finder ---\n",
     "Write your first gene-finding program: have the user enter a string of six nucleotides. If the length of the string is not six, tell the user to input another string. If it is, and the six nucleotide sequence contains 'ATG,' print the position where it is found. If 'ATG' appears multiple times, print only the location of the first instance. If the string does not contain 'ATG', print -1.\n",
     "\n",
     "Hint: one way to do this is to create the four three-base substrings of this string and then determine whether any of the resulting substrings are 'ATG.'\n"
@@ -61,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 3.4: Baby's first FASTA parser\n",
+    "## Exercise 3.4: Baby's first FASTA parser ---\n",
     "Write your first FASTA parser: from a series of user inputs, you wish to create a dictionary keyed by gene IDs with values corresponding to their sequence. A FASTA file has the following format:\n",
     "```\n",
     ">gene1  \n",
@@ -88,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 3.5: Where are those bases?\n",
+    "## Exercise 3.5: Where are those bases? ---\n",
     "In the lesson, we introduced the script below.\n",
     "\n",
     "Go through each line and comment what is occurring. At the nested **for loop**, can you keep track of what is happening? Write out to yourself what is occurring for the first few iterations. Use **print()** and **break** to print what each variable is for the first few iterations and check it against what you thought to make sure you really understand. \n"
@@ -246,7 +246,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 3.9: Multiplying Lists\n",
+    "## Exercise 3.9: Multiplying Lists ---\n",
     "\n",
     "Use \\* (multiplication) to create a list of three empty lists. Use the append method to add the element \"i belong first!\" to the first list of the list of lists. Print out the list of lists. What has happened? \n"
    ]
@@ -279,7 +279,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -293,7 +293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
