Updated Lesson and Exercise 5

--- a/lessons/Lesson4.ipynb
+++ b/lessons/Lesson4.ipynb
@@ -363,9 +363,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<_io.TextIOWrapper name='/scratch/myang_shared/lab/mel/PythonBootcamp/resources/51.2.2M.ind' mode='r' encoding='UTF-8'>\n"
+     ]
+    }
+   ],
    "source": [
     "pD = \"/scratch/myang_shared/lab/mel/PythonBootcamp/resources/\" #Put your path to your resources/ directory\n",
     "myfile = open(pD+\"51.2.2M.ind\",'r')\n",
