Lesson and Exercise 6

--- a/exercises/Exercise6.ipynb
+++ b/exercises/Exercise6.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Exercise 6.1: Exception handling\n",
     "\n",
-    "If you don't know them already, there are two functions to get rid of elements in a set: **remove()** and **discard()**.\n",
+    "If you don't know them already, there are two functions to get rid of elements in a set: `remove()` and `discard()**.\n",
     "\n",
     "A. Now that we've learned more about exception handling, explain what is happening in the script below when you run it.\n",
     "\n",
@@ -54,7 +54,7 @@
     "collapsed": true
    },
    "source": [
-    "## Exercise 6.3: Filetypes\n",
+    "## Exercise 6.3: Filetypes __\n",
     "The \"cerevisiae_genome.fasta\" file in resources/ is very large, such that we might prefer to save space on the computer by zipping the file. Look up the **gzip** Unix command and use it to zip the fasta file. \n",
     "\n",
     "However, now your file cannot be read by your fasta parser. Create a new function called **open_file_by_mimetype** that identifies the filetype and returns an open filehandle without error. This will require use of the **mimetypes** module (look it up, particularly the function **mimetypes.guess_type**) and the **gzip** module (look it up, particularly the **gzip.open** function). Modify your fasta parser accordingly so it can deal with more file types. \n"
